Update build.gradle, move to Base64 from internal Java API